@@ -54,6 +54,7 @@
 		<script type="text/javascript" src="js/units/guardian.js"></script>
 		<script type="text/javascript" src="js/units/bion.js"></script>
 		
+		<script type="text/javascript" src="js/construct_queue.js"></script>
 		<script type="text/javascript" src="js/construct_manager.js"></script>
 		<script type="text/javascript" src="js/pathfinding.js"></script>
 		<script type="text/javascript" src="js/levels/level1.js"></script>
